<resources>
    <string name="app_name">ACBrFood</string>
    <string name="carrinho_de_compras">Carrinho de Compras</string>
    <string name="buscar">Buscar</string>
    <string name="todos">Todos</string>
    <string name="imagem_do_produto">Imagem do Produto</string>
    <string name="remover_item">Remover Item</string>
    <string name="adicionar_item">Adicionar Item</string>
    <string name="initial_value">0</string>
    <string name="pagar">Pagar</string>
    <string name="total">Total</string>
    <string name="ver_carrinho_de_compras">Ver carrinho de compras</string>
    <string name="escolha_a_forma_de_pagamento">Escolha a forma de pagamento</string>
    <string name="debit">Débito</string>
    <string name="credit">Crédito</string>
    <string name="voucher">Voucher</string>
    <string name="pix">PIX</string>
    <string name="cancel">Cancelar</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="empty_cart">Carrinho vazio! Adicione itens primeiro.</string>
    <string name="installment_options">Opções de parcelamento</string>
    <string name="installments_quantity">Escolha a quantidade de parcelas</string>
    <string name="demo">Demo</string>
    <string name="app_logo">App Logo</string>
    <string name="aguarde">Aguarde</string>
    <string name="error_loading_categories">Error ao carregar categorias.</string>
    <string name="error_loading_products">Error ao carregar produtos.</string>
    <string name="error_remove_cart_item">Erro ao remover item do carrinho</string>
    <string name="error_add_cart_item">Erro ao adicionar item do carrinho</string>
    <string name="no_products_found">Nenhum produto encontrado</string>
    <string name="products">Produtos</string>
    <string name="success_message_buy">Compra realizada com sucesso!</string>
    <string name="error_process_payment">Erro ao processar o pagamento.</string>
    <string name="error_process_payment_retry">Ocorreu um erro na transação. Tente novamente.</string>
    <string name="welcome_message">Bem-vindo(a)! O que você deseja para hoje?</string>
    <string name="weigh_dish">Pesar Prato</string>
    <string name="pratos_e_adicionais">Pratos e\nAdicionais</string>
    <string name="ct_food">Imagem de pratos e adicionais</string>
    <string name="ct_scale">Imagem de balança</string>
    <string name="voltar">Voltar</string>
    <string name="instruction_weighing">Por favor, coloque o prato na balança antes de começar.</string>
    <string name="calculate_price">Calcular Valor do Prato</string>
    <string name="finalizar">Finalizar</string>
    <string name="valor_do_prato">Valor do Prato:</string>
    <string name="peso_liquido">Peso Líquido:</string>
    <string name="ct_scale_instruction">Ilustração do Passo Atual</string>
    <string name="error_price_scale">Não foi possível obter o preço.</string>
    <string name="error_get_weight">Não foi possível obter o peso.</string>
    <string name="peso_kg">Peso: %1$s kg</string>
    <string name="error_generic">Ocorreu um erro, Tente novamente.</string>
    <string name="preco_por_">Preço por %1$s: %2$s</string>
    <string name="message_scale_checkout">Deseja adicionar mais itens a sua compra?</string>
    <string name="atencao">Atenção</string>
    <string name="adicionar">Adicionar</string>
</resources>